hphp/hack/test/typecheck/lambda/variadics/lambda_application_incorrect_types.php.exp
File "lambda_application_incorrect_types.php", line 29, characters 12-18:
Invalid argument (Typing[4110])
  File "lambda_application_incorrect_types.php", line 27, characters 20-21:
  This is an object of type D (variadic argument)
  File "lambda_application_incorrect_types.php", line 29, characters 16-16:
  It is incompatible with an object of exactly the class C
